<resources>
    <string name="app_name">Most Common Phrases in Spanish</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="CommonPhrases">MOST COMMON PHRASES IN SPANISH</string>
    <string name="begin">Begin Learning!</string>
    <string name="categories">Categories</string>
    <string name="greetings">Greetings</string>
    <string name="english_phrases">English Phrases</string>
    <string name="spanish_phrases">Spanish Phrases</string>
    <string name="hi">Hi!</string>
    <string name="hola">¡Hola!</string>
    <string name="good_morning">Good morning!</string>
    <string name="buenos_dias">¡Buenos Días!</string>
    <string name="good_evening">Good evening!</string>
    <string name="buenas_tardes">¡Buenas Tardes!</string>
    <string name="welcome">Welcome! (to greet someone)</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="how_are_you">How are you?</string>
    <string name="como_estas">¿Cómo Estás?</string>
    <string name="im_fine">I\'m fine, thanks!</string>
    <string name="estoy_bien">Estoy Bíen ¡Gracias!</string>
    <string name="and_you">And you?</string>
    <string name="y_tu">¿Y Tú?</string>
    <string name="good">Good/ So-So.</string>
    <string name="bien">Bíen/ Así Así</string>
    <string name="thank_you">Thank you (very much)!</string>
    <string name="gracias">¡(Muchas) Gracias!</string>
    <string name="you_are_welcome_here">You\'re welcome! (for "thank you")</string>
    <string name="de_nada">¡De Nada!</string>
    <string name="hey_friend">Hey! Friend!</string>
    <string name="eh_amigo">¡Eh! ¡Amigo!</string>
    <string name="i_missed">I missed you so much!</string>
    <string name="te_extrane">Te extrañé mucho!</string>
    <string name="whats_new">What\'s new?</string>
    <string name="que_hay">¿Qué Hay De Nuevo?</string>
    <string name="nothing">Nothing much</string>
    <string name="nada">Nada</string>
    <string name="good_night">Good night!</string>
    <string name="buenas_noches">¡Buenas noches!</string>
    <string name="see_you">See you later!</string>
    <string name="hasta_luego">¡Hasta luego!</string>
    <string name="good_bye">Good bye!</string>
    <string name="adios">¡Adiós!</string>
    <string name="im_lost">I\'m lost</string>
    <string name="estoy_perdido">Estoy perdido</string>
    <string name="can_i_help">Can I help you?</string>
    <string name="podria_ayarte">¿Podría ayudarte?</string>
    <string name="can_you_help">Can you help me?</string>
    <string name="puede_ayudarme">¿Puede ayudarme?</string>
    <string name="where_is_bath">Where is the (bathroom/ pharmacy)?</string>
    <string name="donde_esta_bano">¿Dónde está (el Baño/ la Farmacia)?</string>
    <string name="go_straight">Go straight! then turn left/ right!</string>
    <string name="vaya_usted_derecho">¡Vaya usted Derecho! Pues Tuerza usted por la Izquierda/ Derecha!</string>
    <string name="im_looking_for">I\'m looking for john.</string>
    <string name="estoy_buscando">Estoy buscando a Juan.</string>
    <string name="one_moment">One moment please!</string>
    <string name="un_momento">¡Un Momento, Por Favor!</string>
    <string name="hold_on">Hold on please! (phone)</string>
    <string name="no_cuelgue">¡No Cuelgue, Por Favor!</string>
    <string name="how_much_is">How much is this?</string>
    <string name="cuanto_vale">¿Cuánto Vale/ Cuesta Eso?</string>
    <string name="excuse_me">Excuse me ...! (to ask for something)</string>
    <string name="perdone">¡Perdone! / ¡Oiga!</string>
    <string name="excuse_me_pass">Excuse me! ( to pass by)</string>
    <string name="perdone_pasar">¡Perdone! / Disculpe!</string>
    <string name="come_with_me">Come with me!</string>
    <string name="venga_conmigo">¡Venga Conmigo!</string>
    <string name="do_you_speak">Do you speak (English/ Spanish)?</string>
    <string name="hablas">¿Hablas (Inglés/ Español)?</string>
    <string name="just_a_little">Just a little.</string>
    <string name="solo_un_poquito">Solo Un Poquito.</string>
    <string name="whats_your_name">What\'s your name?</string>
    <string name="como_te_llamas">¿Cómo te llamas?</string>
    <string name="my_name_is">My name is ...</string>
    <string name="me_llamo">Me llamo ...</string>
    <string name="mr">Mr.../ Mrs.…/ Miss…</string>
    <string name="senor">Señor.../ Señora.../ Señorita...</string>
    <string name="nice_to_meet">Nice to meet you!</string>
    <string name="mucho_gusto">¡Mucho Gusto! / Me dio Gusto Conocerte!</string>
    <string name="you_are_kind">You\'re very kind!</string>
    <string name="eres_amable">¡Eres Muy Amable!</string>
    <string name="where_are_from">Where are you from?</string>
    <string name="de_donde_eres">¿De Dónde Eres?</string>
    <string name="im_from">I\'m from (the U.S/ Spain)</string>
    <string name="soy_de">Soy De (los Estados Unidos/ España..) / Soy (americano)</string>
    <string name="im">I\'m (American)</string>
    <string name="soy">Soy (americano/ americana)</string>
    <string name="where_do_live">Where do you live?</string>
    <string name="donde_vives">¿Dónde Vives?</string>
    <string name="i_live_in">I live in (the U.S/ Spain)</string>
    <string name="vivo_en">Vivo En (los Estados Unidos/ España)</string>
    <string name="did_you_like_it">Did you like it here?</string>
    <string name="le_gusta_aqui">¿Le gusta a usted aquí?</string>
    <string name="spain_is_wonderful">Spain is a wonderful country</string>
    <string name="espana_es_maravilloso">España Es Un País Maravilloso</string>
    <string name="what_do_living">What do you do for a living?</string>
    <string name="a_que_dedicas">¿A Qué Te Dedicas?</string>
    <string name="i_work_as">I work as a (translator/ businessman)</string>
    <string name="trabajo_como">Trabajo Como (Traductor/ Hombre de Negocios)</string>
    <string name="i_like_spanish">I like Spanish</string>
    <string name="_me_gusta_espano">Me Gusta El Español</string>
    <string name="i_been_learning_spanish">I\'ve been learning Spanish for 1 month</string>
    <string name="llevo_estudiando">Llevo Un Mes Estudiando Español</string>
    <string name="oh_good">Oh! That\'s good!</string>
    <string name="oh_bueno">!Oh, qué bueno!</string>
    <string name="how_old">How old are you?</string>
    <string name="cuantos_anios">¿Cuántos Años Tienes?</string>
    <string name="im_years">I\'m (twenty, thirty...) years old.</string>
    <string name="tengo_anios">Tengo (veinte ...treinta) Años.</string>
    <string name="i_have_go">I have to go</string>
    <string name="me_tengo_ir">Me Tengo Que Ir.</string>
    <string name="i_will_right_back">I will be right back!</string>
    <string name="regreso_momentito">Regreso En Un Momentito.</string>
    <string name="good_luck">Good luck!</string>
    <string name="que_tenga_suerte">¡Que Tenga Suerte!</string>
    <string name="happy_birthday">Happy birthday!</string>
    <string name="feliz_cumpleanos">¡Feliz Cumpleaños!</string>
    <string name="happy_year">Happy new year!</string>
    <string name="feliz_anio">¡Feliz Año Nuevo!</string>
    <string name="merry_christmas">Merry Christmas!</string>
    <string name="felis_navidad">¡Feliz Navidad!</string>
    <string name="congratulations">Congratulations!</string>
    <string name="felicidades">¡felicidades!</string>
    <string name="enjoy_meals">Enjoy! (for meals...)</string>
    <string name="que_aproveche">¡Que Aproveche!</string>
    <string name="i_like_visit">I\'d like to visit Spain one day</string>
    <string name="me_gustaria_visitar">Me Gustaría Visitar Algún Día Tu País</string>
    <string name="say_hi_to">Say hi to John for me</string>
    <string name="dale_saludos">Dale Saludos A ( Juan ...) De Mi Parte</string>
    <string name="bless_you">Bless you (when sneezing)</string>
    <string name="salud">¡Salud!</string>
    <string name="good_night_sweet">Good night and sweet dreams!</string>
    <string name="buenas_noches_dulces">¡Buenas Noches Y Dulces Sueños!</string>
    <string name="im_sorry">I\'m Sorry! (if you don\'t hear something)</string>
    <string name="disculpe">¡Disculpe!</string>
    <string name="sorry_mistake">Sorry (for a mistake)</string>
    <string name="lo_siento">¡Lo Siento!</string>
    <string name="no_problem">No Problem!</string>
    <string name="no_problema">¡No hay Problema!</string>
    <string name="can_you_say">Can You Say It Again?</string>
    <string name="puede_repetirlo">¿Puede Repetirlo?</string>
    <string name="can_speak_slowly">Can You Speak Slowly?</string>
    <string name="puedes_hablar_despacio">¡Puedes Hablar Más Despacio!</string>
    <string name="write_down">Write It Down Please!</string>
    <string name="escribalo">¡Escríbalo, Por Favor!</string>
    <string name="i_dont_understand">I Don\'t Understand!</string>
    <string name="no_entiendo">¡No Entiendo!</string>
    <string name="i_dont_know">I Don\'t Know!</string>
    <string name="no_se">¡No (Lo) Sé!</string>
    <string name="i_have_idea">I Have No Idea.</string>
    <string name="no_tengo_idea">¡No Tengo Ni Idea!</string>
    <string name="whats_spanish">What\'s That Called In Spanish?</string>
    <string name="como_espanol">¿Cómo Se llama a Esto En Español?</string>
    <string name="what_does_mean">What Does "gato" Mean In English?</string>
    <string name="que_quiere_decir">¿Qué Quiere Decir "gato" En Inglés?</string>
    <string name="how_do_you_say">How Do You Say "Please" In Spanish?</string>
    <string name="como_dice">¿Cómo Se Dice "please" En Español?</string>
    <string name="what_this">What Is This?</string>
    <string name="que_esto">¿Qué Es Esto?</string>
    <string name="my_spanish_bad">My Spanish is bad.</string>
    <string name="mi_espanol_malo">Mi Español Es Malo</string>
    <string name="i_need_practice">I need to practice my Spanish</string>
    <string name="donde_bano">¿Dónde está el baño?</string>
    <string name="where_bath">Where is the bathroom?</string>
    <string name="donde_cuarto">¿Dónde está mi cuarto?</string>
    <string name="where_room">Where is my room?</string>
    <string name="puedo_pasar">¿Puedo entrar/pasar?</string>
    <string name="can_come_in">Can I enter/come in?</string>
    <string name="puedo_mas">¿Puedo tener más, por favor?</string>
    <string name="can_more">Can I have more, please?</string>
    <string name="me_ayudar">¿Me puedes ayudar?</string>
    <string name="can_help">Can you help me?</string>
    <string name="donde_estamos">¿Dónde estamos ahora?</string>
    <string name="where_are_we">Where are we right now?</string>
    <string name="donde_calle">¿Dónde está la calle ________?</string>
    <string name="where_street">Where is the __________ street?</string>
    <string name="me_prestar">¿Me puedes prestar $5?</string>
    <string name="can_loan">Can you loan me $5?</string>
    <string name="donde_autobus">¿Dónde está el autobús?</string>
    <string name="where_bus">Where is the bus?</string>
    <string name="puedes_guardarlo">¿Puedes guardarlo, por favor?</string>
    <string name="can_hold">Can you hold this, please?</string>
    <string name="quieres_uno">¿Quieres uno?</string>
    <string name="do_want_one">Do you want one?</string>
    <string name="me_das">¿Me das uno?</string>
    <string name="can_i_one">Can I have one?</string>
    <string name="podemos_compartir">¿Podemos compartir?</string>
    <string name="can_share">Can we share?</string>
    <string name="se_vende">¿Se vende ______ aquí?</string>
    <string name="do_you_sell">Do you sell _______ here?</string>
    <string name="cuanto_cuesta">¿Cuánto cuesta?</string>
    <string name="how_much">How much does it cost?</string>
    <string name="tienes_cambio">¿Tienes cambio?</string>
    <string name="do_change">Do you have change?</string>
    <string name="common_questions">Common Questions</string>
</resources>